@@ -1,0 +1,17 @@
+{
+    "name" : "cppp-platform",
+    "version" : "1.3.0",
+    "list_file_path": "FILELIST",
+    "description": "Portable platform check library for C++ Plus.",
+    "authors": [
+        "The C++ Plus Project",
+        "ChenPi11"
+    ],
+    "webpage": "https://github.com/cppp-project/cppp-platform",
+    "subpackages": {
+        "build-aux": { "path": "build-aux", "ignore": true }
+    },
+    "license": [
+        "Unlicense"
+    ]
+}
