@@ -1,0 +1,19 @@
+README.md
+cpppdist.py
+doc/compilers.md
+doc/architectures.md
+doc/languagestandards.md
+doc/doc.md
+doc/platforms.md
+FILELIST
+include/cppp/cppp-platform.h.in
+src/platforms.h
+src/languagestandards.h
+src/architectures.h
+src/compilers.h
+CMakeLists.txt
+CPPPPKG
+lang/zh_CN.langmap
+lang/en_US.langmap
+ChangeLog
+COPYING
