@@ -1,3 +1,7 @@
+2023-08-09  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
+
+    Add C++ Plus package infomation.
+
 2023-08-08  ChenPi11  <wushengwuxi-msctinoulk@outlook.com>
 
     Add CMake buildsystem support.
